# VirtualLibrary

./: #README.txt  CMakeLists.txt  CMakeLists.txt.user.eacrLv  Main.qml  MyControl.ui.qml  README.md  biblioteka.cpp  biblioteka.h  ksiazka.cpp  ksiazka.h  ksiazki.csv  ksiazki.xlsx  main.cpp  polka.cpp  polka.h  szafa.cpp  szafa.h
books/: biografia.csv  fantasy.csv  historyczna.csv  horror.csv  kryminal.csv  mlodziezowa.csv  przygodowa.csv  romans.csv
modele/: ksiazka.blend
